@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2021 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.notify.AdapterFactory;
 import org.eclipse.emf.ecore.EObject;
@@ -56,11 +55,10 @@ public class EStructuralFeatureChoiceOfValueProvider implements Function<Variabl
                 IItemPropertyDescriptor descriptor = itemPropertySource.getPropertyDescriptor(eObject, eReference);
                 if (descriptor != null) {
                     // @formatter:off
-                    List<Object> choiceOfValues = descriptor.getChoiceOfValues(eObject).stream()
+                    return descriptor.getChoiceOfValues(eObject).stream()
                             .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
+                            .toList();
                     // @formatter:on
-                    return choiceOfValues;
                 }
             }
         }
