@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2022 Obeo.
+ * Copyright (c) 2021, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -14,7 +14,6 @@ package org.eclipse.sirius.web.services.images;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.eclipse.sirius.web.persistence.entities.CustomImageMetadataEntity;
 import org.eclipse.sirius.web.persistence.repositories.ICustomImageMetadataRepository;
@@ -44,7 +43,7 @@ public class ProjectCustomImageMetadataSearchService implements IProjectCustomIm
                 .orElse(List.of())
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
         // @formatter:on
     }
 
