@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo.
+ * Copyright (c) 2021, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -13,7 +13,6 @@
 package org.eclipse.sirius.components.validation.render;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.sirius.components.representations.IElementFactory;
 import org.eclipse.sirius.components.representations.IProps;
@@ -47,7 +46,7 @@ public class ValidationElementFactory implements IElementFactory {
         List<Diagnostic> diagnostics = children.stream()
                 .filter(Diagnostic.class::isInstance)
                 .map(Diagnostic.class::cast)
-                .collect(Collectors.toList());
+                .toList();
 
         return Validation.newValidation(props.getId())
                 .label(props.getLabel())
