@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022 Obeo.
+ * Copyright (c) 2022, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.util.EList;
 import org.eclipse.emf.ecore.EClass;
@@ -160,7 +159,7 @@ public class OperationInterpreterViewSwitch extends ViewSwitch<Optional<Variable
                 elementsToUnset = optionalObjectsToUnset.get().stream()
                                       .filter(EObject.class::isInstance)
                                       .map(EObject.class::cast)
-                                      .collect(Collectors.toList());
+                                      .toList();
                 // @formatter:on
             }
         }
